--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/PThreads.vcxproj
-/PThreads.vcxproj.filters
-/PThreads.vcxproj.user
-/x64\Debug
+PThreads.vcxproj
+PThreads.vcxproj.filters
+PThreads.vcxproj.user
+x64
